--- a/homescreen.html
+++ b/homescreen.html
@@ -15,6 +15,10 @@ WELCOME TO CHEAPOMAIL!
 </div>
 
 <div>
+<input type="button" value="New User" id="new_user">
+</div>
+
+<div>
 <input type="button" value="Compose New Message" id="compose">
 </div>
 
